package stormstock.fw.event; 

message StormExit  { 
}